# opsmeter.io-python-sdk

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
opsmeter_sdk/: __init__.py  sdk.py
tests/: test_sdk.py
